# glassbox-mech

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MATH_FOUNDATIONS.md  METHODOLOGY.md  README.md  SECURITY.md  action.yml  department_roadmap.md  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.toml  vercel.json
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md  compliance-generator.md  doc-updater.md  interpretability-researcher.md  python-reviewer.md  pytorch-build-resolver.md
.claude/commands/: audit.md  circuit.md  compliance.md  review.md  test.md
.claude/skills/circuit-discovery/: SKILL.md
.claude/skills/eu-ai-act-compliance/: SKILL.md
.claude/skills/mechanistic-interpretability/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/pytorch-transformerlens/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy_hf.yml  deploy_vercel.yml  publish.yml  publish_mcp.yml  tests.yml  vercel.yml  vercel_status.yml
api/: downloads.py  index.py  main.py
benchmarks/: run_all.py  run_ioi.py
dashboard/: app.py  compliance_dashboard.html
docs/: LOGO-GUIDELINES.md  brand-philosophy.md  index.html
docs/_design-snapshot/: index.html
examples/: 01_ioi_circuit.py  02_token_attribution.py  03_logit_lens.py  04_head_composition.py  05_attention_patterns.py
experiments/: PAPER_OUTLINE.md  cross_model_study.py
glassbox/: __init__.py  acdc.py  audit_log.py  bias.py  compliance.py  composition.py  core.py  corruption.py  cross_model.py  evidence_vault.py  hf_integration.py  sae_attribution.py  telemetry.py  validation.py  widget.py
mcp/: README.md  pyproject.toml  requirements.txt  server.py
mcp/glassbox_mcp/: __init__.py
scripts/: benchmark_v340.py  glassbox_ci_audit.py  sync_versions.py
sdk/: glassbox.ts
tests/: conftest.py  test_engine.py
