[build-system]
requires      = ["setuptools>=61,<74", "wheel"]  # <74 keeps Metadata-Version 2.3 (PyPI-safe)
build-backend = "setuptools.build_meta"

[project]
name        = "glassbox-mech-interp"
version     = "2.9.0"
description = "Mechanistic interpretability toolkit + EU AI Act Annex IV compliance report generator. Circuit analysis, black-box audit, audit log, Jupyter widgets, GitHub Action, TypeScript SDK."
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Ajay Pravin Mahale", email = "mahale.ajay01@gmail.com" }]
requires-python = ">=3.8"

keywords = [
    "mechanistic-interpretability",
    "transformers",
    "circuits",
    "attribution-patching",
    "edge-attribution-patching",
    "logit-lens",
    "sparse-autoencoders",
    "sae",
    "composition-scores",
    "attention-heads",
    "explainability",
    "XAI",
    "LLM",
    "GPT-2",
    "circuit-discovery",
    "alignment",
    "eu-ai-act",
    "annex-iv",
    "compliance",
    "audit",
    "black-box-audit",
    "regulatory-compliance",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.0",
    "transformer_lens>=1.0",
    "einops",
    "numpy",
]


[project.urls]
Homepage      = "https://glassbox-ai-2-0-mechanistic.onrender.com"
Dashboard     = "https://glassbox-ai-2-0-mechanistic.onrender.com/dashboard"
Documentation = "https://glassbox-ai-2-0-mechanistic.onrender.com/docs"
Repository    = "https://github.com/designer-coderajay/Glassbox-AI-2.0-Mechanistic-Interpretability-tool"
Paper         = "https://arxiv.org/abs/2603.09988"

[project.optional-dependencies]
sae = [
    "sae-lens>=3.0",
]
compliance = [
    "reportlab>=3.6.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "reportlab>=3.6.0",
]
jupyter = [
    "ipywidgets>=8.0",
    "ipython>=7.0",
]
dev = [
    "pytest>=7.0",
    "sae-lens>=3.0",
    "reportlab>=3.6.0",
    "ipywidgets>=8.0",
]
[project.scripts]
glassbox-ai = "glassbox.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
glassbox = ["py.typed"]

# ---------------------------------------------------------------------------
# pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow — skip in fast CI with '-m \"not slow\"'",
]
addopts = "--tb=short"

[tool.coverage.run]
source  = ["glassbox"]
omit    = ["glassbox/alignment.py", "glassbox/cli.py"]

[tool.coverage.report]
show_missing   = true
skip_covered   = false
fail_under     = 80
exclude_lines  = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.8"
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# ruff — linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py38"
select         = ["E", "F", "I", "N", "UP"]
ignore         = ["E501"]
